--- a/package.json
+++ b/package.json
@@ -42,6 +42,11 @@
     "echarts": "^5.4.2",
     "echarts-liquidfill": "^3.1.0",
     "element-plus": "^2.3.4",
+    "eslint-plugin-import": "^2.28.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-standard": "^5.0.0",
+    "http-proxy-middleware": "^2.0.6",
     "js-md5": "^0.7.3",
     "mitt": "^3.0.1",
     "nprogress": "^0.2.0",
