--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "pinia": "^2.1.4",
     "pinia-plugin-persistedstate": "^3.1.0",
     "print-js": "^1.6.0",
+    "qrcode.vue": "^3.4.1",
     "qs": "^6.11.2",
     "screenfull": "^6.0.2",
     "sortablejs": "^1.15.0",
