--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "scripts": {
     "dev": "vite",
     "serve": "vite",
-    "build": "vite build",
+    "build": "vite build --mode production",
     "build:dev": "vue-tsc --noEmit && vite build  --mode development",
     "build:test": "vue-tsc --noEmit && vite build --mode test",
     "build:pro": "vue-tsc --noEmit && vite build --mode production",
