--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
   "scripts": {
     "dev": "vite",
     "serve": "vite",
-    "build": "vite build --mode production",
+    "build": "vite build --mode test",
     "build:dev": "vue-tsc --noEmit && vite build  --mode development",
     "build:test": "vue-tsc --noEmit && vite build --mode test",
-    "build:pro": "vue-tsc --noEmit && vite build --mode production",
+    "build:pro": "vite build --mode production",
     "type:check": "vue-tsc --noEmit --skipLibCheck",
     "preview": "npm run build:dev && vite preview",
     "prepare": "husky install",
